<resources>
    <string name="app_name">TicTacToe</string>
    <string name="app_title">TicTacToe Game</string>
    <string name="start_button">Play</string>
    <string name="select_game_mode">Select game mode</string>
    <string name="btn_pvp_mode">2 players</string>
    <string name="btn_pvc_mode">Against computer</string>
    <string name="player_move">"#'s move"</string>
    <string name="player_1_name">Player #1 name (X)</string>
    <string name="player_2_name">Player #2 name (O)</string>
    <string name="hint_players_names">Enter players names</string>
    <string name="start_game_button">Start game</string>
    <string name="play_again_btn">Play again</string>
</resources>